--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-player": "^2.16.0",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
