--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-player": "^2.16.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "video-react": "^0.16.0"
   },
   "devDependencies": {
