--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "video-react": "^0.16.0"
   },
   "devDependencies": {
