--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-haiku": "^2.1.8",
+    "react-icons": "^5.3.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
