--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-haiku": "^2.1.8",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
