--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "framer-motion": "^11.11.8",
     "lucide": "^0.451.0",
     "lucide-react": "^0.451.0",
     "nextjs-toploader": "^3.7.15",
@@ -22,6 +23,7 @@
     "react-infinite-logo-slider": "^1.0.13",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
