--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
