--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "aos": "^2.3.4",
     "framer-motion": "^11.11.8",
     "lucide": "^0.451.0",
@@ -23,6 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
