--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "aos": "^2.3.4",
     "framer-motion": "^11.11.10",
+    "hls.js": "^1.5.17",
     "lucide": "^0.451.0",
     "lucide-react": "^0.451.0",
     "nextjs-toploader": "^3.7.15",
