--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "react-social-media-embed": "^2.5.17",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
