--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
     "hls.js": "^1.5.17",
     "lucide": "^0.451.0",
