--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "react-social-media-embed": "^2.5.17",
+    "react-tabs": "^6.0.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
