--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-magic-motion": "^1.1.2",
+    "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
