--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
+    "gsap": "^3.12.5",
     "hls.js": "^1.5.17",
+    "lenis": "^1.1.18",
     "lucide": "^0.451.0",
     "lucide-react": "^0.451.0",
     "nextjs-toploader": "^3.7.15",
