--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-haiku": "^2.1.8",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.15.0",
     "react-magic-motion": "^1.1.2",
     "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
@@ -35,6 +36,7 @@
     "react-slick": "^0.30.2",
     "react-social-media-embed": "^2.5.17",
     "react-tabs": "^6.0.2",
+    "sitemap": "^8.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
