--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "source-map-explorer build/static/js/*.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
@@ -15,10 +16,8 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
-    "hls.js": "^1.5.17",
     "lenis": "^1.1.18",
     "lucide": "^0.451.0",
-    "lucide-react": "^0.451.0",
     "nextjs-toploader": "^3.7.15",
     "react": "^18.3.1",
     "react-compare-slider": "^3.1.0",
@@ -26,9 +25,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-haiku": "^2.1.8",
     "react-helmet": "^6.1.0",
-    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.15.0",
-    "react-magic-motion": "^1.1.2",
     "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
@@ -53,6 +50,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
