--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-tabs": "^6.0.2",
     "sitemap": "^8.0.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
